--- a/Lab6/Percepton.ipynb
+++ b/Lab6/Percepton.ipynb
@@ -14,7 +14,7 @@
     "If the input layer has dimension $n$, as below,\n",
     "\n",
     "<img src=\"./Images/Percepton_1.png\"\n",
-    " style=\"float:center;width:300px;height:300px;\" align=\"center\">\n",
+    " style=\"float:center;\" align=\"center\">\n",
     "\n",
     "\n",
     "the Neural Net predicts the output as\n",
@@ -25,7 +25,7 @@
     "When dealing with a two-dimensional input as the following structure\n",
     "\n",
     "<img src=\"./Images/Percepton_2.png\"\n",
-    " style=\"float:center;width:50px;height:50px;\">\n",
+    " style=\"float:center;\">\n",
     " \n",
     "everything gets simple and the formula is\n",
     "$$\n",
