--- a/Lab2/FullOrderModel.ipynb
+++ b/Lab2/FullOrderModel.ipynb
@@ -306,7 +306,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "ntDW-FKIZuU3"
+    "id": "ntDW-FKIZuU3",
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -326,6 +327,15 @@
    "outputs": [],
    "source": [
     "gedim.PlotSolution(mesh, dofs, strongs, solution, solutionStrong)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gedim.ExportSolution(Poisson_exactSolution, solution, solutionStrong, lib)"
    ]
   },
   {
@@ -400,6 +410,10 @@
     "\n",
     "def Heat_weakTerm_down(numPoints, points):\n",
     "\tvalues = np.ones(numPoints) * Heat_G()\n",
+    "\treturn values.ctypes.data\n",
+    "\n",
+    "def Empty_exactSolution(numPoints, points):\n",
+    "\tvalues = np.zeros(numPoints)\n",
     "\treturn values.ctypes.data"
    ]
   },
@@ -550,6 +564,15 @@
    "outputs": [],
    "source": [
     "gedim.PlotSolution(mesh, dofs, strongs, solution, np.zeros(problemData['NumberStrongs']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gedim.ExportSolution(Empty_exactSolution, solution, np.zeros(problemData['NumberStrongs']), lib)"
    ]
   }
  ],
