--- a/Lab1/L1_python_introduction.ipynb
+++ b/Lab1/L1_python_introduction.ipynb
@@ -47,7 +47,7 @@
     "* **1990**: First implementation by Guido Van Rossum\n",
     "* **2001**: Python Software Foundation License (Python 2.1)\n",
     "* **2008**: Modern Python 3.0 is released\n",
-    "* <div class=\"alert alert-block alert-success\"> <b>Today</b>: Python 3.11 released </div>\n",
+    "* <div class=\"alert alert-block alert-success\"> <b>Today</b>: Python 3.12 released </div>\n",
     "\n",
     "#### Other Information\n",
     "* Documentation: https://docs.python.org/3/\n",
@@ -55,6 +55,16 @@
     "* Installation: https://www.python.org/downloads/\n",
     "\n",
     "<div class=\"alert alert-block alert-warning\"> <b>Is Python trendy?</b> <a href=\"https://www.tiobe.com/tiobe-index/\">https://www.tiobe.com/tiobe-index/</a>. </div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58eaf752-631a-41aa-b855-751f749fc6a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python3 --version"
    ]
   },
   {
@@ -162,7 +172,7 @@
    "source": [
     "## Variables\n",
     "\n",
-    "<div class=\"alert alert-block alert-warning\"><b>NOTE</b>: In Python all the variables are <b>pointers</b> without a fixed type. </div>\n",
+    "<div class=\"alert alert-block alert-warning\"><b>NOTE</b>: In Python all the variables are <b>\"pointers\"</b> without a fixed type. </div>\n",
     "\n",
     "<img src=\"Images/variables.png\" width=30% style=\"margin-left:auto; margin-right:auto\">"
    ]
@@ -755,13 +765,13 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    arr0D = np.array(42);\n",
-    "    print(\"Array Dim:\", arr0D.ndim, \"size:\", arr0D.shape, \":\\n\", arr0D)\n",
+    "    print(\"Array 0D Dim:\", arr0D.ndim, \"size:\", arr0D.shape, \":\\n\", arr0D)\n",
     "    arr1D = np.array([1, 2, 3, 4, 5])\n",
-    "    print(\"Array Dim:\", arr1D.ndim, \"size:\", arr1D.shape, \":\\n\", arr1D)\n",
+    "    print(\"Array 1D Dim:\", arr1D.ndim, \"size:\", arr1D.shape, \":\\n\", arr1D)\n",
     "    arr2D = np.array([[1, 2, 3, 4, 5],[1, 2, 3, 4, 5]])\n",
-    "    print(\"Array Dim:\", arr2D.ndim, \"size:\", arr2D.shape, \":\\n\", arr2D)\n",
+    "    print(\"Array 2D Dim:\", arr2D.ndim, \"size:\", arr2D.shape, \":\\n\", arr2D)\n",
     "    arr5D = np.array([1, 2, 3, 4], ndmin=5)\n",
-    "    print(\"Array D:\", arr5D.ndim, \"size:\", arr5D.shape, \":\\n\", arr5D)\n",
+    "    print(\"Array 5D D:\", arr5D.ndim, \"size:\", arr5D.shape, \":\\n\", arr5D)\n",
     "    \n",
     "    row_ind = np.array([0, 1, 1, 3, 4])\n",
     "    col_ind = np.array([0, 2, 4, 3, 4])\n",
@@ -1060,9 +1070,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "course_env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "course_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1074,7 +1084,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
