--- a/Lab3/ReducedOrderModel.ipynb
+++ b/Lab3/ReducedOrderModel.ipynb
@@ -281,7 +281,14 @@
     "$$\n",
     "\\sum_{i=1}^{q_a} \\theta_i^a(\\boldsymbol \\mu)a_i(u,v) = \\sum_{i=0}^{q_f} \\theta_i^f(\\boldsymbol \\mu)f_i(v),\n",
     "$$\n",
-    "for $\\theta_i^a(\\boldsymbol \\mu)$ and $\\theta_i^f(\\boldsymbol \\mu)$ real functions and $q_a, q_f \\in \\mathbb N$. \n",
+    "for $\\theta_i^a(\\boldsymbol \\mu)$ and $\\theta_i^f(\\boldsymbol \\mu)$ real functions and $q_a, q_f \\in \\mathbb N$.\n",
+    "\n",
+    "Algebraic-wise\n",
+    "\n",
+    "$$\n",
+    "\\sum_{i=1}^{q_a} \\theta_i^a(\\boldsymbol \\mu)\\mathsf A_i = \\sum_{i=0}^{q_f} \\theta_i^f(\\boldsymbol \\mu)\\mathsf f_i,\n",
+    "$$\n",
+    "where $\\mathsf A_i$ and $\\mathsf f_i$ are the assembled matrices and vectors of the system.\n",
     "\n",
     "\n",
     "The separation of variables, i.e. $\\boldsymbol \\mu$-dependent and $\\boldsymbol \\mu$-independent quantities, is really useful to divide the ROM process following the _offline_-_online_ paradigm (more details in the next Lab).\n",
