--- a/Lab4/POD.ipynb
+++ b/Lab4/POD.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# **Proper Orthogonal Decomposition (POD)**\n",
-    "This lab focuses on performing POD on the parametric system we saw together in the previous lab.\n",
+    "This Lab focuses on performing POD on the parametric system we saw together in the previous Lab.\n",
     "\n",
     "Once again, we need _a lot_ of FOM simulations this time. Let us import ``gedim``!"
    ]
@@ -70,8 +70,7 @@
     "where $k_{\\mu} = \\mu_1$ if $x^2 + y^2 \\leq R^2$ and $k = 1$ otherwise. \n",
     "The parametric space is $\\mathcal P = [0.1, 10] \\times [-1,1]$.\n",
     "\n",
-    "<img src=\"https://drive.google.com/uc?id=1j98eKPtRy8IqsLMKkue2dINRy6yNS20j\"\n",
-    " style=\"float:center;width:50px;height:50px;\" align=\"center\">\n",
+    "<img src=\"Images/ROM_problem1_domain.png\" width=30% style=\"margin-left:auto; margin-right:auto\">\n",
     "\n",
     "\n",
     "The parameter $\\boldsymbol \\mu \\in \\mathcal P$ is physical and changes the features of the flow: \n",
@@ -144,11 +143,11 @@
     "1. we _explore_ the information related to the solution varying with respect to $\\boldsymbol \\mu$ (_snapshots_) in a finite dimensional set $\\mathcal P_{train} \\subset \\mathcal P$.\n",
     "2. We compress the redundant information and retain only the most significant \"linear directions\", building a linear subspace $\\mathbb V_N \\subset \\mathbb V^{\\mathcal N}$ of dimension $N \\ll \\mathcal N$.\n",
     "\n",
-    "Building the space and store the $\\boldsymbol \\mu-$independent quantities is the so called _offline phase_ (possibly costly).\n",
+    "Building the space and store the $\\boldsymbol \\mu$-independent quantities is the so called _offline phase_ (possibly costly).\n",
     "\n",
     "Once the space is built, a fast _online phase_ occurs, where I can compute **many solutions in real-time**.\n",
     "\n",
-    "How is it possible? By means of the affine decomposition! Indeed we know that our system can be written as\n",
+    "How is it possible? By means of **the affine decomposition**! Indeed we know that our system can be written as\n",
     "\n",
     "$$\n",
     "\\sum_{i=1}^{q_a} \\theta_i^a(\\boldsymbol \\mu)a_i(u,v) = \\sum_{i=0}^{q_f} \\theta_i^f(\\boldsymbol \\mu)f_i(v),\n",
@@ -336,9 +335,7 @@
     "id": "qxhstATIaEjU"
    },
    "source": [
-    "We now need to define the _snapshot matrix_. The snapshot matrix is $\\mathbb U \\in \\mathbb R^{{M} \\times {\\mathcal N}}$ \n",
-    "\n",
-    "(is it the dimension on the book?)"
+    "We now need to define the _snapshot matrix_. The snapshot matrix is $\\mathbb U \\in \\mathbb R^{{M} \\times {\\mathcal N}}$ "
    ]
   },
   {
@@ -376,13 +373,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "QaK4VnzVcdBy"
-   },
+   "metadata": {},
    "source": [
     "**It's time for the POD**\n",
     "\n",
-    "To build the $N-$dimesional framework we need, we define the correlation snapshot matrix $\\mathbf C \\in \\mathbb R^{M \\times M}$ and we solve the eigenvalue problem\n",
+    "To build the $N$-dimesional framework we need, we define the correlation snapshot matrix $\\mathbf C \\in \\mathbb R^{M \\times M}$ and we solve the eigenvalue problem\n",
     "$\n",
     "    \\mathbf C \\omega_n = \\lambda_n \\omega_n\n",
     "$ for $ 1 \\leq n \\leq M,$ with $\\lvert \\lvert {\\omega_n}\\rvert \\rvert_{\\mathbb V} = 1$. \n",
@@ -394,7 +389,7 @@
     "Indeed, defining as  $P_N: \\mathbb V \\rightarrow \\mathbb V_N$ the projector from $\\mathbb V$ onto $ {\\mathbb V}_N$, the following relation holds:\n",
     "\\begin{equation}\n",
     "    \\sqrt{\\frac{1}{M}\n",
-    "    \\sum_{i = 1}^{M}  \\lvert \\lvert {u^{\\mathcal N}(\\boldsymbol{\\mu}_{i}) - P_N(u^{\\mathcal N}(\\boldsymbol{\\mu}_i)\\rvert \\rvert }_{\\mathbb V}^2} = \\sqrt{\n",
+    "    \\sum_{i = 1}^{M}  \\lvert \\lvert {u^{\\mathcal N}(\\boldsymbol{\\mu}_{i}) - P_N(u^{\\mathcal N}(\\boldsymbol{\\mu}_i))\\rvert \\rvert }_{2}^2} = \\sqrt{\n",
     "    \\sum_{i = N + 1}^{M}\\lambda_m.}\n",
     "\\end{equation}\n",
     "Namely, a fast decay of the eigenvalue magnitude guaratees a good representation of the high-fidelity solution with a few basis functions."
@@ -448,9 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "QLgHs0h9in74"
-   },
+   "metadata": {},
    "source": [
     "We still need to create the basis matrix $\\mathbb B$. There are many ways to build the bases.\n",
     "We propose the following one to guarantee more stability:\n",
@@ -459,6 +452,22 @@
     "$$\n",
     "\n",
     "and $\\displaystyle \\xi_n = \\frac{\\chi_n}{\\lvert \\lvert \\chi_n \\rvert \\rvert }_{\\mathbb V}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "QLgHs0h9in74"
+   },
+   "source": [
+    "\n",
+    "$P_N: \\mathbb V \\rightarrow \\mathbb V_N$ is defined as\n",
+    "\n",
+    "$$\n",
+    "P_N(u^{\\mathcal N}(\\boldsymbol \\mu)) = \\sum_{i=1}^N (u^{\\mathcal N}(\\boldsymbol \\mu), \\xi_n)\\xi_n,\n",
+    "$$\n",
+    "\n",
+    "or algebraically $\\mathbb P_N = \\mathbb B \\mathbb B^T$."
    ]
   },
   {
@@ -556,7 +565,7 @@
     "##### solve ######### \n",
     "\n",
     "reduced_solution = np.linalg.solve(reduced_rhs, reduced_lhs)\n",
-    "print(reduced_solution)"
+    "# print(reduced_solution)"
    ]
   },
   {
