--- a/Lab5/greedy.ipynb
+++ b/Lab5/greedy.ipynb
@@ -70,8 +70,8 @@
     "where $k_{\\mu} = \\mu_1$ if $x^2 + y^2 \\leq R^2$ and $k = 1$ otherwise. \n",
     "The parametric space is $\\mathcal P = [0.1, 10] \\times [-1,1]$.\n",
     "\n",
-    "<img src=\"https://drive.google.com/uc?id=1j98eKPtRy8IqsLMKkue2dINRy6yNS20j\"\n",
-    " style=\"float:center;width:50px;height:50px;\" align=\"center\">\n",
+    "<img src=\"./Images/domain.png\"\n",
+    " style=\"float:center;\" align=\"center\">\n",
     "\n",
     "\n",
     "The parameter $\\boldsymbol \\mu \\in \\mathcal P$ is physical and changes the features of the flow: \n",
