--- a/Lab6/Percepton.ipynb
+++ b/Lab6/Percepton.ipynb
@@ -106,6 +106,7 @@
     "x2 = []\n",
     "y2 = []\n",
     "\n",
+    "\n",
     "for row in dataset:\n",
     "    if row[-1] == 0:\n",
     "        x1.append(row[0])\n",
@@ -121,7 +122,7 @@
     "# To show the plot\n",
     "plt.show()\n",
     "\n",
-    "\n",
+    "print(dataset[-1])\n",
     "# weights = [-0.1, 0.20653640140000007, -0.23418117710000003]  #### this are the ones related to the dataset"
    ]
   },
@@ -142,6 +143,8 @@
     "        # sum_error = 0.0\n",
     "        for x in train:\n",
     "            prediction = predict(x, weights,bias)\n",
+    "            print(prediction)\n",
+    "            print(x[-1], \"x-1\")\n",
     "            error = (x[-1] - prediction)\n",
     "            sum_error += error**2\n",
     "            bias = bias + l_rate * error\n",
@@ -188,8 +191,13 @@
    "outputs": [],
    "source": [
     "#### point ####\n",
-    "x = 2.7\n",
+    "x = 3.7\n",
     "y = 2.\n",
+    "\n",
+    "#### plot the separation line ###\n",
+    "xx = np.linspace(1,9,50)\n",
+    "yy = (-xx*weights[0] - bias)/weights[1] \n",
+    "\n",
     "\n",
     "prediction = predict([x,y],weights, bias)\n",
     "\n",
@@ -202,6 +210,8 @@
     "plt.scatter(x1, y1, c = \"blue\", label=\"First group\")\n",
     "plt.scatter(x2, y2, c = \"red\",label=\"Second group\")\n",
     "plt.scatter(x, y, 200, c = color ,marker=\"^\",label=\"New evaluation\")\n",
+    "plt.plot(xx, yy, label=\"separation line\", c=\"green\")\n",
+    "plt.ylim([0,5])\n",
     "plt.legend()\n",
     " \n",
     "# To show the plot\n",
@@ -228,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
