--- a/Lab6/UniversalApproximationTheorem.ipynb
+++ b/Lab6/UniversalApproximationTheorem.ipynb
@@ -26,7 +26,7 @@
     "id": "7jEvpdaArWOf"
    },
    "source": [
-    "The theorem has its variants related to the numeber of layers for fixed number of neurons. Or, for fixed number of neurons and layers, one can choose a proper activation function (is it really feasible?)"
+    "The theorem has its variants related to the number of layers for fixed number of neurons. Or, for fixed number of neurons and layers, one can choose a proper activation function (is it really feasible?)"
    ]
   },
   {
@@ -78,7 +78,7 @@
     "Working on the universal approximation theorem means _changing_ the parameters and the structure of the net:\n",
     "* number of neurons\n",
     "* number of layers\n",
-    "* learning rate (very important!) and optimization process\n",
+    "* learning rate (very important!) and optimization process ([LOOK!](https://imgur.com/a/Hqolp))\n",
     "* number of epochs (duration of the training process) \n",
     "* activation function (.... _really?_ ....)"
    ]
@@ -231,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
