--- a/Lab6/tensors.ipynb
+++ b/Lab6/tensors.ipynb
@@ -24,7 +24,7 @@
     "They are able to run on\n",
     "GPUs or specialized hardware that lead to more fast results.\n",
     "\n",
-    "_**I am not familiar with ndarrays (false, see last week Lab), do I have to worry?**_\n",
+    "_**I am not familiar with ndarrays (false, see previous Labs), do I have to worry?**_\n",
     "No worries, let us go thorugh this quick introduction!\n"
    ]
   },
@@ -381,7 +381,7 @@
    "source": [
     "**Be carefull!**\n",
     "\n",
-    " In-place operations are good for memory, but can be problematic when computing derivatives.\n",
+    " In-place operations (i.e. operations that changes directly the content of a given Tensor without making a copy) are good for memory, but can be problematic when computing derivatives.\n",
     "\n"
    ]
   },
@@ -535,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
