--- a/Lab7/CNN.ipynb
+++ b/Lab7/CNN.ipynb
@@ -167,7 +167,9 @@
     "\n",
     "Then we pool. You define how many pixel you want to consider (2x2) and the _stride_, i.e. how do you move along the pixels.\n",
     "\n",
-    "In the end, a fully connected layer is defined (nothing new).\n"
+    "In the end, a fully connected layer is defined (nothing new).\n",
+    "\n",
+    "Courious about how to match dimensions of the CNN? [Give a look](https://towardsdatascience.com/a-comprehensible-explanation-of-the-dimensions-in-cnns-841dba49df5e)"
    ]
   },
   {
