Lab 7, with no answers (#8)
* fix image issue

* Dobe with Lab3

* Done with Lab4

* fix

* Greedy fix (#6)

* add: domain

* fix image

* new lab 4

* replace with the one to complete

* Done with Lab7

---------

Co-authored-by: fabio.vicini <fabio.vicini@polito.it>
Co-authored-by: Fabio Vicini <90675116+fvicini@users.noreply.github.com>

--- a/Lab7/Gradient_descent.ipynb
+++ b/Lab7/Gradient_descent.ipynb
@@ -3,6 +3,13 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "rLGyVkeJAhyg"
+      },
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "OrdIjjfUMSGu"
       },
       "source": [
@@ -44,7 +51,7 @@
         "Imagine to have $m$ data and we want to optimize the parameters of the net minimizing the following _mean square error_ loss:\n",
         "\n",
         "$$\n",
-        "L = \\frac{1}{m}\\sum_i^m (y^{nn}_i - y_i)^2\n",
+        "L = \\frac{1}{m}\\sum_i^m (y_i - y^{nn}_i)^2\n",
         "$$\n",
         "\n",
         "where $\\displaystyle y^{nn}_i = w \\cdot x_i + b$. The gradient descent algorithm is based on the idea that the _faster_ way to reach a minimum is to follow the negative gradient of the quantity we want to minimize.\n",
@@ -56,11 +63,11 @@
         "\n",
         "In the specific case of the mean square error we have:\n",
         "$$\n",
-        "\\frac{\\partial L}{\\partial w} = \\frac{2}{m}\\sum_i^m x_i( w \\cdot x_i + b - y_i),\n",
+        "\\frac{\\partial L}{\\partial w} = \\frac{2}{m}\\sum_i^m x_i(y_i -  w \\cdot x_i + b),\n",
         "$$\n",
         "while \n",
         "$$\n",
-        "\\frac{\\partial L}{\\partial b} = \\frac{2}{m}\\sum_i^m ( w \\cdot x_i + b - y_i).\n",
+        "\\frac{\\partial L}{\\partial b} = \\frac{2}{m}\\sum_i^m (y_i -  w \\cdot x_i + b).\n",
         "$$\n",
         "\n",
         "The new parameter are, given a _learning rate_ $\\lambda$:\n",
@@ -133,10 +140,9 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {
-        "id": "WUTji9u8frbW"
-      },
+      "metadata": {},
       "source": [
         "**Dataset**: MNIST images. The MNIST dataset contains 28x28 grayscale images of handwritten digits from 0 to 9. The training set has 60,000 samples, the test set has 10,000 samples. The output is an interger label from 0 to 9."
       ]
@@ -176,7 +182,7 @@
         "id": "yePCRvI1VFNv"
       },
       "source": [
-        "**Answer:** it normilizes the data (useful in many application) and changes the output from a number from 0 to 9 to the \"odd class\" (1) and \"even class\" (-1).\n"
+        "**Answer:** ....\n"
       ]
     },
     {
@@ -203,7 +209,12 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "d7XLHSJHE2du"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 377
+        },
+        "id": "d7XLHSJHE2du",
+        "outputId": "abffa69e-934f-4ea7-8a78-a4a3e9ab93c4"
       },
       "outputs": [],
       "source": [
@@ -247,7 +258,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "R7sW3yAQE2du"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R7sW3yAQE2du",
+        "outputId": "5fa88d07-10c0-4362-eb5f-09852faa912f"
       },
       "outputs": [],
       "source": [
@@ -258,11 +273,15 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "UeDTkpd7ffMn"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UeDTkpd7ffMn",
+        "outputId": "8c122a4a-1f61-4865-ae8a-153812c438aa"
       },
       "outputs": [],
       "source": [
-        "print(ys[\"train\"].shape)\n",
+        "ys[\"train\"].shape\n",
         "print(ys[\"train\"][0])"
       ]
     },
@@ -281,7 +300,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "6yYI-mr49Bqs"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6yYI-mr49Bqs",
+        "outputId": "f290e90d-7675-43c2-b5aa-0c90255ea987"
       },
       "outputs": [],
       "source": [
@@ -304,7 +327,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "51LwKFmz9TOo"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "51LwKFmz9TOo",
+        "outputId": "40cbbc3a-13a2-4a31-f1ef-23bd4ccc69f5"
       },
       "outputs": [],
       "source": [
@@ -348,10 +375,10 @@
         "def  loss(w,b,X,y):\n",
         "    \n",
         "    \n",
-        "    m = X.shape[0]\n",
+        "    m = # shape of the input\n",
         "    \n",
-        "    predictions = w @ X.T + b\n",
-        "    my_loss = (1/m)* torch.sum((predictions - y)**2)\n",
+        "    predictions = ...\n",
+        "    my_loss = ....\n",
         "    return my_loss"
       ]
     },
@@ -375,14 +402,13 @@
         "#### errors dict of \"train\" and \"test\"\n",
         "\n",
         "def gradient_descent(X,y,w,b,errors=None,learning_rate=0.01,epochs=100):\n",
-        "    m =  X.shape[0]\n",
+        "    m =  ...\n",
         "    for it in range(epochs):\n",
         "        \n",
-        "        prediction = w @ X.T + b\n",
-        "        w_d =  (2/m)*(prediction - y) @ X # derivative of the loss with respect to w\n",
-        "        w = w - learning_rate*w_d # update the weight \n",
-        "        b_d = (2/m)*torch.sum((prediction - y)) # derivative of the loss with respect to b\n",
-        "        b = b - learning_rate*b_d # update the bias\n",
+        "        w_d = ... # derivative of the loss with respect to w\n",
+        "        w = ... # update the weight \n",
+        "        b_d = ... # derivative of the loss with respect to b\n",
+        "        b = ... # update the bias\n",
         "        \n",
         "        if errors:\n",
         "            for mode in modes:\n",
@@ -446,6 +472,8 @@
         "ax.set_title(\"Loss MNIST\\n ($N=%d, \\lambda=%g$)\" % (epochs, lr))\n",
         "ax.set_xlabel(\"step\")\n",
         "ax.set_ylabel(\"mse\")\n",
+        "# ax.set_xscale(\"log\")\n",
+        "ax.set_ylim(bottom=0)\n",
         "plt.show()"
       ]
     },
@@ -510,7 +538,7 @@
       "source": [
         "external_grad = torch.tensor([1., 1.])\n",
         "T.backward(gradient=external_grad)\n",
-        "# T.sum().backward() \n",
+        "# T.sum().backward()\n",
         "\n"
       ]
     },
@@ -549,9 +577,10 @@
         "def  loss(w,b,X,y):\n",
         "    \n",
         "    \n",
-        "    predictions = w @ X.T + b\n",
-        "    my_loss = torch.mean((predictions - y)**2)\n",
+        "    m = ...\n",
         "    \n",
+        "    predictions = ...\n",
+        "    my_loss = ...\n",
         "    return my_loss"
       ]
     },
@@ -564,14 +593,14 @@
       "outputs": [],
       "source": [
         "def auto_gradient_descent(X,y,w,b,errors=None,learning_rate=0.01,epochs=100):\n",
-        "    \n",
+        "    m =  ...\n",
         "    for it in range(epochs):\n",
         "        my_loss = loss(w,b,X,y)\n",
         "        my_loss.backward()\n",
         "        \n",
         "        with torch.no_grad(): # do note trace once again \n",
-        "            w = w - learning_rate*w.grad #update w\n",
-        "            b = b - learning_rate*b.grad # update b\n",
+        "            w = ... #update w\n",
+        "            b = ... # update p\n",
         "            w.requires_grad_(True)\n",
         "            b.requires_grad_(True) \n",
         "\n",
@@ -629,6 +658,7 @@
         "ax.set_xlabel(\"step\")\n",
         "ax.set_ylabel(\"mse\")\n",
         "ax.set_yscale(\"log\")\n",
+        "ax.set_ylim(bottom=0)\n",
         "plt.show()"
       ]
     }
