--- a/Lab7/Gradient_descent.ipynb
+++ b/Lab7/Gradient_descent.ipynb
@@ -3,13 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rLGyVkeJAhyg"
-      },
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "OrdIjjfUMSGu"
       },
       "source": [
@@ -51,7 +44,7 @@
         "Imagine to have $m$ data and we want to optimize the parameters of the net minimizing the following _mean square error_ loss:\n",
         "\n",
         "$$\n",
-        "L = \\frac{1}{m}\\sum_i^m (y_i - y^{nn}_i)^2\n",
+        "L = \\frac{1}{m}\\sum_i^m (y^{nn}_i - y_i)^2\n",
         "$$\n",
         "\n",
         "where $\\displaystyle y^{nn}_i = w \\cdot x_i + b$. The gradient descent algorithm is based on the idea that the _faster_ way to reach a minimum is to follow the negative gradient of the quantity we want to minimize.\n",
@@ -63,11 +56,11 @@
         "\n",
         "In the specific case of the mean square error we have:\n",
         "$$\n",
-        "\\frac{\\partial L}{\\partial w} = \\frac{2}{m}\\sum_i^m x_i(y_i -  w \\cdot x_i + b),\n",
+        "\\frac{\\partial L}{\\partial w} = \\frac{2}{m}\\sum_i^m x_i( w \\cdot x_i + b - y_i),\n",
         "$$\n",
         "while \n",
         "$$\n",
-        "\\frac{\\partial L}{\\partial b} = \\frac{2}{m}\\sum_i^m (y_i -  w \\cdot x_i + b).\n",
+        "\\frac{\\partial L}{\\partial b} = \\frac{2}{m}\\sum_i^m ( w \\cdot x_i + b - y_i).\n",
         "$$\n",
         "\n",
         "The new parameter are, given a _learning rate_ $\\lambda$:\n",
@@ -140,9 +133,10 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "WUTji9u8frbW"
+      },
       "source": [
         "**Dataset**: MNIST images. The MNIST dataset contains 28x28 grayscale images of handwritten digits from 0 to 9. The training set has 60,000 samples, the test set has 10,000 samples. The output is an interger label from 0 to 9."
       ]
@@ -182,7 +176,7 @@
         "id": "yePCRvI1VFNv"
       },
       "source": [
-        "**Answer:** ....\n"
+        "**Answer:** it normilizes the data (useful in many application) and changes the output from a number from 0 to 9 to the \"odd class\" (1) and \"even class\" (-1).\n"
       ]
     },
     {
@@ -209,12 +203,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 377
-        },
-        "id": "d7XLHSJHE2du",
-        "outputId": "abffa69e-934f-4ea7-8a78-a4a3e9ab93c4"
+        "id": "d7XLHSJHE2du"
       },
       "outputs": [],
       "source": [
@@ -258,11 +247,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "R7sW3yAQE2du",
-        "outputId": "5fa88d07-10c0-4362-eb5f-09852faa912f"
+        "id": "R7sW3yAQE2du"
       },
       "outputs": [],
       "source": [
@@ -273,15 +258,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "UeDTkpd7ffMn",
-        "outputId": "8c122a4a-1f61-4865-ae8a-153812c438aa"
+        "id": "UeDTkpd7ffMn"
       },
       "outputs": [],
       "source": [
-        "ys[\"train\"].shape\n",
+        "print(ys[\"train\"].shape)\n",
         "print(ys[\"train\"][0])"
       ]
     },
@@ -300,11 +281,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6yYI-mr49Bqs",
-        "outputId": "f290e90d-7675-43c2-b5aa-0c90255ea987"
+        "id": "6yYI-mr49Bqs"
       },
       "outputs": [],
       "source": [
@@ -327,11 +304,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "51LwKFmz9TOo",
-        "outputId": "40cbbc3a-13a2-4a31-f1ef-23bd4ccc69f5"
+        "id": "51LwKFmz9TOo"
       },
       "outputs": [],
       "source": [
@@ -375,10 +348,10 @@
         "def  loss(w,b,X,y):\n",
         "    \n",
         "    \n",
-        "    m = # shape of the input\n",
+        "    m = X.shape[0]\n",
         "    \n",
-        "    predictions = ...\n",
-        "    my_loss = ....\n",
+        "    predictions = w @ X.T + b\n",
+        "    my_loss = (1/m)* torch.sum((predictions - y)**2)\n",
         "    return my_loss"
       ]
     },
@@ -402,13 +375,14 @@
         "#### errors dict of \"train\" and \"test\"\n",
         "\n",
         "def gradient_descent(X,y,w,b,errors=None,learning_rate=0.01,epochs=100):\n",
-        "    m =  ...\n",
+        "    m =  X.shape[0]\n",
         "    for it in range(epochs):\n",
         "        \n",
-        "        w_d = ... # derivative of the loss with respect to w\n",
-        "        w = ... # update the weight \n",
-        "        b_d = ... # derivative of the loss with respect to b\n",
-        "        b = ... # update the bias\n",
+        "        prediction = w @ X.T + b\n",
+        "        w_d =  (2/m)*(prediction - y) @ X # derivative of the loss with respect to w\n",
+        "        w = w - learning_rate*w_d # update the weight \n",
+        "        b_d = (2/m)*torch.sum((prediction - y)) # derivative of the loss with respect to b\n",
+        "        b = b - learning_rate*b_d # update the bias\n",
         "        \n",
         "        if errors:\n",
         "            for mode in modes:\n",
@@ -472,8 +446,6 @@
         "ax.set_title(\"Loss MNIST\\n ($N=%d, \\lambda=%g$)\" % (epochs, lr))\n",
         "ax.set_xlabel(\"step\")\n",
         "ax.set_ylabel(\"mse\")\n",
-        "# ax.set_xscale(\"log\")\n",
-        "ax.set_ylim(bottom=0)\n",
         "plt.show()"
       ]
     },
@@ -538,7 +510,7 @@
       "source": [
         "external_grad = torch.tensor([1., 1.])\n",
         "T.backward(gradient=external_grad)\n",
-        "# T.sum().backward()\n",
+        "# T.sum().backward() \n",
         "\n"
       ]
     },
@@ -577,10 +549,9 @@
         "def  loss(w,b,X,y):\n",
         "    \n",
         "    \n",
-        "    m = ...\n",
+        "    predictions = w @ X.T + b\n",
+        "    my_loss = torch.mean((predictions - y)**2)\n",
         "    \n",
-        "    predictions = ...\n",
-        "    my_loss = ...\n",
         "    return my_loss"
       ]
     },
@@ -593,14 +564,14 @@
       "outputs": [],
       "source": [
         "def auto_gradient_descent(X,y,w,b,errors=None,learning_rate=0.01,epochs=100):\n",
-        "    m =  ...\n",
+        "    \n",
         "    for it in range(epochs):\n",
         "        my_loss = loss(w,b,X,y)\n",
         "        my_loss.backward()\n",
         "        \n",
-        "        with torch.no_grad(): # do note trace once again \n",
-        "            w = ... #update w\n",
-        "            b = ... # update p\n",
+        "        with torch.no_grad(): # do not trace once again \n",
+        "            w = w - learning_rate*w.grad #update w\n",
+        "            b = b - learning_rate*b.grad # update b\n",
         "            w.requires_grad_(True)\n",
         "            b.requires_grad_(True) \n",
         "\n",
@@ -658,7 +629,6 @@
         "ax.set_xlabel(\"step\")\n",
         "ax.set_ylabel(\"mse\")\n",
         "ax.set_yscale(\"log\")\n",
-        "ax.set_ylim(bottom=0)\n",
         "plt.show()"
       ]
     }
