--- a/Lab12/NonLinear.ipynb
+++ b/Lab12/NonLinear.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "BeaV-lky4gkR"
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "BeaV-lky4gkR"
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "13zM04WMQ5hJ"
    },
@@ -71,20 +71,29 @@
     "id": "Zng9sfOKQtVo"
    },
    "source": [
-    "## Elliptic Equation\n",
+    "## Non-Linear Equation\n",
     "\n",
     "Solving the following equation on square $\\bar{\\Omega} = [0, 1] \\times [0, 1]$\n",
     "\n",
     "$$\n",
     "\\begin{cases}\n",
-    "\\nabla \\cdot (a \\nabla u) + b \\cdot \\nabla u + c u = f & \\text{in } \\Omega\\\\\n",
-    "a \\nabla u \\cdot n_1 = g_1 & \\text{in } \\Gamma_{left}\\\\\n",
-    "a \\nabla u \\cdot n_2 = g_2 & \\text{in } \\Gamma_{right}\\\\\n",
-    "u = 1.1 & \\text{in } ∂Ω∖ (\\Gamma_{left} ∪ \\Gamma_{right})\n",
+    "- \\nabla \\cdot (\\nabla u) + u \\nabla \\cdot u = g & \\text{in } \\Omega\\\\\n",
+    "u = 0.0 & \\text{in } ∂Ω\n",
     "\\end{cases}\n",
     "$$\n",
     "\n",
-    "where $u = 16 xy(1-x)(1-y) + 1.1$."
+    "where $u = 16 xy(1-x)(1-y)$.\n",
+    "\n",
+    "The weak form of the problem becomes, find $u \\in V := H^1_0(\\Omega)$\n",
+    "$$\n",
+    "\\int_{\\Omega} \\nabla u \\nabla v + \\int_{\\Omega} u \\nabla \\cdot u v - \\int_{\\Omega} g v = 0 \\quad \\forall v \\in V \\Leftrightarrow f(u; v) := f_1(u; v) = 0 \\quad \\forall v \\in V\n",
+    "$$\n",
+    "\n",
+    "Using Newton schema, we solve for each $k$ iteration the problem\n",
+    "$$\n",
+    "J_f [\\partial u]_{|_{u_k}} = - f(u_k; v) = 0 \\quad \\forall v \\in V\n",
+    "$$\n",
+    "where $J_f [\\partial u]_{|_{u_k}}$ is the evaluation of the derivative (Jacobian) of $J_f$ in the point $u_k$ along the unknown direction of $\\partial u$."
    ]
   },
   {
@@ -361,218 +370,6 @@
     "\n",
     "print(\"dofs\", \"h\", \"errorL2\", \"errorH1\")\n",
     "print(problemData['NumberDOFs'], '{:.16e}'.format(problemData['H']), '{:.16e}'.format(errorL2), '{:.16e}'.format(errorH1))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "Ubq1Ge_iQkak"
-   },
-   "source": [
-    "## Heat Conductivity Equation\n",
-    "\n",
-    "Solving the following equation on square $\\bar{\\Omega} = [-1, +1] \\times [-1, +1]$\n",
-    "\n",
-    "$$\n",
-    "\\begin{cases}\n",
-    "\\nabla \\cdot (k \\nabla u) = 0 & \\text{in } \\Omega\\\\\n",
-    "k \\nabla u \\cdot n_1 = g & \\text{in } \\Gamma_{down}\\\\\n",
-    "u = 0 & \\text{in } \\Gamma_{up}\\\\\n",
-    "k \\nabla u \\cdot n_2 = 0 & \\text{otherwise} \n",
-    "\\end{cases}\n",
-    "$$\n",
-    "\n",
-    "where $k = k_1$ if $x^2 + y^2 \\leq R^2$ and $k = 1$ otherwise. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "JOPeoKRlRNMo"
-   },
-   "outputs": [],
-   "source": [
-    "def Heat_R():\n",
-    "\treturn 0.5\n",
-    "def Heat_K():\n",
-    "\treturn 6.68\n",
-    "def Heat_G():\n",
-    "\treturn 0.94\n",
-    "\n",
-    "def Heat_k(numPoints, points):\n",
-    "\tmatPoints = gedim.make_nd_matrix(points, (3, numPoints), np.double)\n",
-    "\tvalues = np.ones(numPoints)\n",
-    "\tfor p in range(0, numPoints):\n",
-    "\t\tif (matPoints[0,p] * matPoints[0,p] + matPoints[1,p] * matPoints[1,p]) <= (Heat_R() * Heat_R() + 1.0e-16):\n",
-    "\t\t\tvalues[p] = Heat_K()\n",
-    "\treturn values.ctypes.data\n",
-    "\n",
-    "def Heat_weakTerm_down(numPoints, points):\n",
-    "\tvalues = np.ones(numPoints) * Heat_G()\n",
-    "\treturn values.ctypes.data\n",
-    "\n",
-    "def Empty_exactSolution(numPoints, points):\n",
-    "\tvalues = np.zeros(numPoints)\n",
-    "\treturn values.ctypes.data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "q9JEfUdDRH5W"
-   },
-   "source": [
-    "### Define Simulation Parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "nfzHSAXORH5X"
-   },
-   "outputs": [],
-   "source": [
-    "order = 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "CsFEtqOyRSEo"
-   },
-   "source": [
-    "### Import Mesh"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "uZXNw6gDlHZt"
-   },
-   "outputs": [],
-   "source": [
-    "%%writefile ImportMesh.csv\n",
-    "InputFolderPath\n",
-    "/content/CppToPython/Meshes/Mesh2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "gFrwWHkGRTcM"
-   },
-   "outputs": [],
-   "source": [
-    "[meshInfo, mesh] = gedim.ImportDomainMesh2D(lib)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "FifaSs5tRWLp"
-   },
-   "outputs": [],
-   "source": [
-    "gedim.PlotMesh(mesh)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "ZFLs55ZIRjRw"
-   },
-   "source": [
-    "### Create Discrete Space FEM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "vtVL7IqnRlra"
-   },
-   "outputs": [],
-   "source": [
-    "discreteSpace = { 'Order': order, 'Type': 1, 'BoundaryConditionsType': [1, 3, 3, 2] }\n",
-    "[problemData, dofs, strongs] = gedim.Discretize(discreteSpace, lib)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "tNKv663YRvMJ"
-   },
-   "outputs": [],
-   "source": [
-    "gedim.PlotDofs(mesh, dofs, strongs)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "9-GPibkUR0yD"
-   },
-   "source": [
-    "### Assemble linear system"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "g7XmYDOGR1m4"
-   },
-   "outputs": [],
-   "source": [
-    "[stiffness, stiffnessStrong] = gedim.AssembleStiffnessMatrix(Heat_k, problemData, lib)\n",
-    "\t\n",
-    "weakTerm_down = gedim.AssembleWeakTerm(Heat_weakTerm_down, 1, problemData, lib)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "TcVTiQGqR-oz"
-   },
-   "source": [
-    "### Solve linear system"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "DfINEnRbR_31"
-   },
-   "outputs": [],
-   "source": [
-    "solution = gedim.LUSolver(stiffness, weakTerm_down, lib)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "W6Qajo4RSDLC"
-   },
-   "outputs": [],
-   "source": [
-    "gedim.PlotSolution(mesh, dofs, strongs, solution, np.zeros(problemData['NumberStrongs']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gedim.ExportSolution(Empty_exactSolution, solution, np.zeros(problemData['NumberStrongs']), lib)"
    ]
   }
  ],
