--- a/Lab12/NonLinear.ipynb
+++ b/Lab12/NonLinear.ipynb
@@ -93,7 +93,13 @@
     "$$\n",
     "J_f [\\partial u]_{|_{u_k}} = - f(u_k; v) = 0 \\quad \\forall v \\in V\n",
     "$$\n",
-    "where $J_f [\\partial u]_{|_{u_k}}$ is the evaluation of the derivative (Jacobian) of $J_f$ in the point $u_k$ along the unknown direction of $\\partial u$."
+    "where $J_f [\\partial u]_{|_{u_k}}$ is the evaluation of the derivative (Jacobian) of $J_f$ in the point $u_k$ along the unknown direction of $\\partial u$.\n",
+    "\n",
+    "After computations, we find the linear system, on each $k$ iteration, fixed $u_k$ find $\\partial u$ s.t.\n",
+    "\n",
+    "$$\n",
+    "\\int_{\\Omega} \\nabla \\partial u \\cdot \\nabla v + \\int_{\\Omega} \\nabla \\cdot u_k \\partial u \\ v + \\int_{\\Omega} u_k \\nabla \\cdot \\partial u \\ v = - \\int_{\\Omega} \\nabla u_k \\cdot \\nabla v - \\int_{\\Omega} \\nabla u_k \\cdot u_k \\ v + \\int_{\\Omega} g v \n",
+    "$$"
    ]
   },
   {
