correct small typo

--- a/Lab11/ROMStokes.ipynb
+++ b/Lab11/ROMStokes.ipynb
@@ -374,7 +374,7 @@
     "If we apply three different PODs, we need three different snapshots matrices.\n",
     "Usually, computing the supremizer for all the pressure modes retained is not feasable (FE offline), thus, we use the _inexact supremizer_. We compute the supremizers for the snapshots that we already have and we perform the POD on the supremizer snapshots, too. The basis will be added in the projection phase.\n",
     "\n",
-    "Experimentally has been verified that it is a valid strategy to avoid $N_{\\delta}-$dependent computations on the online phase."
+    "Experimentally has been verified that it is a valid strategy to avoid $N_{\\delta}$-dependent computations on the online phase."
    ]
   },
   {
