add: non linear lab

--- a/Lab12/NonLinear.ipynb
+++ b/Lab12/NonLinear.ipynb
@@ -110,48 +110,84 @@
    },
    "outputs": [],
    "source": [
-    "def Poisson_a(numPoints, points):\n",
-    "\tvalues = np.ones(numPoints)\n",
-    "\treturn values.ctypes.data\n",
+    "def Burger_a(numPoints, points):\n",
+    "\tvalues_a = np.ones(numPoints, order='F')\n",
+    "\treturn values_a.ctypes.data\n",
     "\n",
-    "def Poisson_b(numPoints, points):\n",
-    "\tvalues = np.ones((2, numPoints))\n",
-    "\treturn values.ctypes.data\n",
+    "def Burger_b(numPoints, points):\n",
+    "\tvalues_b = np.ones((2, numPoints), order='F')\n",
+    "\treturn values_b.ctypes.data\n",
     "\n",
-    "def Poisson_c(numPoints, points):\n",
-    "\tvalues = np.ones(numPoints)\n",
-    "\treturn values.ctypes.data\n",
+    "def Burger_c(numPoints, points):\n",
+    "\tvalues_c = np.ones(numPoints, order='F')\n",
+    "\treturn values_c.ctypes.data\n",
     "\n",
-    "def g(numPoints, points):\n",
+    "def Burger_non_linear_b(numPoints, points, u, u_x, u_y):\n",
+    "\tvecu = gedim.make_nd_array(u, numPoints, np.double)\n",
+    "\tvalues_nl_b = vecu\n",
+    "\treturn values_nl_b.ctypes.data\n",
+    "\n",
+    "def Burger_non_linear_c(numPoints, points, u, u_x, u_y):\n",
+    "\tvecu_x = gedim.make_nd_array(u_x, numPoints, np.double)\n",
+    "\tvecu_y = gedim.make_nd_array(u_y, numPoints, np.double)\n",
+    "\tvalues_nl_c = vecu_x + vecu_y\n",
+    "\treturn values_nl_c.ctypes.data\n",
+    "\n",
+    "def Burger_f(numPoints, points):\n",
     "\tmatPoints = gedim.make_nd_matrix(points, (3, numPoints), np.double)\n",
-    "\tvalues = \\\n",
-    "    32.0 * (matPoints[1,:] * (1.0 - matPoints[1,:]) + matPoints[0,:] * (1.0 - matPoints[0,:])) + \\\n",
-    "\t16.0 * ((1.0 - 2.0 * matPoints[0,:]) * matPoints[1,:] * (1.0 - matPoints[1,:]) + \\\n",
-    "\t(1.0 - 2.0 * matPoints[1,:]) * matPoints[0,:] * (1.0 - matPoints[0,:])) * \\\n",
+    "\tvalues_f = 32.0 * (matPoints[1,:] * (1.0 - matPoints[1,:]) + matPoints[0,:] * (1.0 - matPoints[0,:])) + \\\n",
+    "\t(16.0 * (1.0 - 2.0 * matPoints[0,:]) * matPoints[1,:] * (1.0 - matPoints[1,:]) + \\\n",
+    "\t16.0 * (1.0 - 2.0 * matPoints[1,:]) * matPoints[0,:] * (1.0 - matPoints[0,:])) * \\\n",
     "\t16.0 * (matPoints[1,:] * (1.0 - matPoints[1,:]) * matPoints[0,:] * (1.0 - matPoints[0,:]))\n",
-    "\treturn values.ctypes.data\n",
+    "\treturn values_f.ctypes.data\n",
     "\n",
-    "def exactSolution(numPoints, points):\n",
+    "def Burger_non_linear_f(numPoints, points, u, u_x, u_y):\n",
+    "\tvecu = gedim.make_nd_array(u, numPoints, np.double)\n",
+    "\tvecu_x = gedim.make_nd_array(u_x, numPoints, np.double)\n",
+    "\tvecu_y = gedim.make_nd_array(u_y, numPoints, np.double)\n",
+    "\tvalues_nl_f = vecu * (vecu_x + vecu_y)\n",
+    "\treturn values_nl_f.ctypes.data\n",
+    "\n",
+    "def Burger_non_linear_der_f(numPoints, points, u, u_x, u_y):\n",
+    "\tvecu_x = gedim.make_nd_array(u_x, numPoints, np.double)\n",
+    "\tvecu_y = gedim.make_nd_array(u_y, numPoints, np.double)\n",
+    "\tvalues_nl_d_f = np.zeros((2, numPoints), order='F')\n",
+    "\tvalues_nl_d_f[0,:] = vecu_x\n",
+    "\tvalues_nl_d_f[1,:] = vecu_y\n",
+    "\treturn values_nl_d_f.ctypes.data\n",
+    "\n",
+    "def Burger_exactSolution(numPoints, points):\n",
     "\tmatPoints = gedim.make_nd_matrix(points, (3, numPoints), np.double)\n",
-    "\tvalues = 16.0 * (matPoints[1,:] * (1.0 - matPoints[1,:]) * matPoints[0,:] * (1.0 - matPoints[0,:]))\n",
-    "\treturn values.ctypes.data\n",
+    "\tvalues_ex = 16.0 * (matPoints[1,:] * (1.0 - matPoints[1,:]) * matPoints[0,:] * (1.0 - matPoints[0,:]))\n",
+    "\treturn values_ex.ctypes.data\n",
     "\n",
-    "def exactDerivativeSolution(direction, numPoints, points):\n",
+    "def Burger_exactDerivativeSolution(direction, numPoints, points):\n",
     "\tmatPoints = gedim.make_nd_matrix(points, (3, numPoints), np.double)\n",
     "\n",
     "\tif direction == 0:\n",
-    "\t\tvalues = 16.0 * (1.0 - 2.0 * matPoints[0,:]) * matPoints[1,:] * (1.0 - matPoints[1,:])\n",
+    "\t\tvalues_ex_d = 16.0 * (1.0 - 2.0 * matPoints[0,:]) * matPoints[1,:] * (1.0 - matPoints[1,:])\n",
     "\telif direction == 1:\n",
-    "\t\tvalues = 16.0 * (1.0 - 2.0 * matPoints[1,:]) * matPoints[0,:] * (1.0 - matPoints[0,:])\n",
+    "\t\tvalues_ex_d = 16.0 * (1.0 - 2.0 * matPoints[1,:]) * matPoints[0,:] * (1.0 - matPoints[0,:])\n",
     "\telse:\n",
-    "\t\tvalues = np.zeros(numPoints)\n",
+    "\t\tvalues_ex_d = np.zeros(numPoints, order='F')\n",
     "\n",
-    "\treturn values.ctypes.data\n",
+    "\treturn values_ex_d.ctypes.data\n",
     "\n",
-    "def strongTerm(numPoints, points):\n",
-    "\tmatPoints = gedim.make_nd_matrix(points, (3, numPoints), np.double)\n",
-    "\tvalues = 16.0 * (matPoints[1,:] * (1.0 - matPoints[1,:]) * matPoints[0,:] * (1.0 - matPoints[0,:])) + 1.1\n",
-    "\treturn values.ctypes.data"
+    "def Ones(numPoints, points):\n",
+    "\tvalues_one = np.ones(numPoints, order='F')\n",
+    "\treturn values_one.ctypes.data\n",
+    "\n",
+    "def OnesDerivative(numPoints, points):\n",
+    "\tvalues_one_d = np.ones((2, numPoints), order='F')\n",
+    "\treturn values_one_d.ctypes.data\n",
+    "\n",
+    "def Zeros(numPoints, points):\n",
+    "\tvalues_zero = np.zeros(numPoints, order='F')\n",
+    "\treturn values_zero.ctypes.data\n",
+    "\n",
+    "def ZerosDerivative(direction, numPoints, points):\n",
+    "\tvalues_zero_d = np.zeros(numPoints, order='F')\n",
+    "\treturn values_zero_d.ctypes.data"
    ]
   },
   {
@@ -164,6 +200,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set geometry parameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -172,155 +215,42 @@
    "outputs": [],
    "source": [
     "meshSize = 0.01\n",
-    "order = 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "kHoPAf81YZUb"
-   },
-   "source": [
-    "### Create Mesh\n",
+    "order = 1\n",
     "\n",
-    "The library accepts the possibility to create square domains and rectangle domains.\n",
-    "\n",
-    "To description of the domain borders are passed to the library for the vertices and the edges of the domain as integer values called `markers`.\n",
-    "Each `marker` identifies a different boundary condition.\n",
-    "\n",
-    "__In this example__:\n",
-    "\n",
-    " `marker=2` identifies $Γ_{right}$, `marker=3` identifies $Γ_{left}$ and `marker=1` identifies the Dirichlet boundary."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "tX7A7k4tYW43"
-   },
-   "outputs": [],
-   "source": [
     "domain = { 'SquareEdge': 1.0, 'VerticesBoundaryCondition': [1,1,1,1], 'EdgesBoundaryCondition': [1,1,1,1], 'DiscretizationType': 1, 'MeshCellsMaximumArea': meshSize }\n",
-    "[meshInfo, mesh] = gedim.CreateDomainSquare(domain, lib)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "bNiO0Un-38om"
-   },
-   "outputs": [],
-   "source": [
-    "gedim.PlotMesh(mesh)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "jHQjoya_ZsAf"
-   },
-   "source": [
-    "### Create Discrete Space FEM\n",
+    "[meshInfo, mesh] = gedim.CreateDomainSquare(domain, lib)\n",
     "\n",
-    "The boundary condition types are passed to the library during the creation of the discrete space.\n",
-    "The types are the following:\n",
-    "* `BoundaryConditionType=1`: internal mesh point;\n",
-    "* `BoundaryConditionType=2`: strong boundary mesh point (Dirichlet in this example);\n",
-    "* `BoundaryConditionType=3`: weak boundary mesh point (Neumann in this example).\n",
-    "The array `BoundaryConditionType` describes for each `marker` the type of boundary condition associated.\n",
-    "\n",
-    "__NB__: the array has dimension `num_markers+1`, as the first element is associated to non-usable `marker=0`.\n",
-    "\n",
-    "__In this example__:\n",
-    "\n",
-    "we have $3$ different markers, thus `BoundaryConditionsType` has size $3+1=4$. In particular `marker=1` has type `BoundaryConditionsType[1]=2` (Dirichlet), `marker=2` has type `BoundaryConditionsType[2]=3` and `marker=3` (Neumann) has type `BoundaryConditionsType[3]=3` (Neumann)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "HzQr59tqZTvN"
-   },
-   "outputs": [],
-   "source": [
     "discreteSpace = { 'Order': order, 'Type': 1, 'BoundaryConditionsType': [1, 2] }\n",
     "[problemData, dofs, strongs] = gedim.Discretize(discreteSpace, lib)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set Newton parameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "SrsZqj6o4D_k"
+    "id": "2ok6VkTC40OC"
    },
    "outputs": [],
    "source": [
-    "gedim.PlotDofs(mesh, dofs, strongs)"
+    "residual_norm = 1.0\n",
+    "solution_norm = 1.0;\n",
+    "newton_tol = 1.0e-6\n",
+    "max_iterations = 7\n",
+    "num_iteration = 1"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Xqp_ZBhOZoqD"
-   },
+   "metadata": {},
    "source": [
-    "### Assemble linear system"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "k8kxI9HE4oIm"
-   },
-   "outputs": [],
-   "source": [
-    "[stiffness, stiffnessStrong] = gedim.AssembleStiffnessMatrix(Poisson_a, problemData, lib)\n",
-    "\n",
-    "[advection, advectionStrong] = gedim.AssembleAdvectionMatrix(Poisson_b, problemData, lib)\n",
-    "\n",
-    "[reaction, reactionStrong] = gedim.AssembleReactionMatrix(Poisson_c, problemData, lib)\n",
-    "\n",
-    "forcingTerm = gedim.AssembleForcingTerm(g, problemData, lib)\n",
-    "\n",
-    "solutionStrong = gedim.AssembleStrongSolution(strongTerm, 1, problemData, lib)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "ueyGr8b2ZxAk"
-   },
-   "source": [
-    "### Solve linear system"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "ntDW-FKIZuU3",
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "solution = gedim.LUSolver(stiffness + advection + reaction, \\\n",
-    "    forcingTerm - \\\n",
-    "    (stiffnessStrong + advectionStrong + reactionStrong) @ solutionStrong, lib)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "gXeJV2jo4Gnt"
-   },
-   "outputs": [],
-   "source": [
-    "gedim.PlotSolution(mesh, dofs, strongs, solution, solutionStrong)"
+    "Set Initial Solution"
    ]
   },
   {
@@ -329,32 +259,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gedim.ExportSolution(exactSolution, solution, solutionStrong, lib)"
+    "u_k = np.zeros(problemData['NumberDOFs'], order='F')\n",
+    "u_strong = np.zeros(problemData['NumberStrongs'], order='F')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "Bk3wRkfXZ17s"
+    "id": "Xqp_ZBhOZoqD"
    },
    "source": [
-    "### Compute errors"
+    "### Run Newton Algorithm"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "k-nq8FPSZ0O0"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "errorL2 = gedim.ComputeErrorL2(exactSolution, solution, solutionStrong, lib)\n",
+    "while num_iteration < max_iterations and residual_norm > newton_tol * solution_norm: \n",
+    "    [stiffness, stiffnessStrong] = gedim.AssembleStiffnessMatrix(Burger_a, problemData, lib)\n",
+    "    [reaction, reactionStrong] = gedim.AssembleNonLinearReactionMatrix(Burger_c, Burger_non_linear_c, u_k, u_strong, problemData, lib)\n",
+    "    [advection, advectionStrong] = gedim.AssembleNonLinearAdvectionMatrix(Burger_b, Burger_non_linear_b, u_k, u_strong, problemData, lib)\n",
     "\n",
-    "errorH1 = gedim.ComputeErrorH1(exactDerivativeSolution, solution, solutionStrong, lib)\n",
+    "    forcingTerm_g = gedim.AssembleForcingTerm(Burger_f, problemData, lib)\n",
+    "    forcingTerm_v = gedim.AssembleNonLinearForcingTerm(Ones, Burger_non_linear_f, u_k, u_strong, problemData, lib)\n",
+    "    forcingTerm_der_v = gedim.AssembleNonLinearDerivativeForcingTerm(OnesDerivative, Burger_non_linear_der_f, u_k, u_strong, problemData, lib)\n",
+    "    \n",
+    "    du = gedim.LUSolver(stiffness + advection + reaction, \\\n",
+    "            forcingTerm_g - forcingTerm_v - forcingTerm_der_v, \\\n",
+    "            lib)\n",
+    "    \n",
+    "    u_k = u_k + du\n",
+    "    \n",
+    "    du_normL2 = gedim.ComputeErrorL2(Zeros, du, np.zeros(problemData['NumberStrongs'], order='F'), lib)\n",
+    "    u_errorL2 = gedim.ComputeErrorL2(Burger_exactSolution, u_k, u_strong, lib)\n",
+    "    u_errorH1 = gedim.ComputeErrorH1(Burger_exactDerivativeSolution, u_k, u_strong, lib)\n",
+    "    u_normL2 = gedim.ComputeErrorL2(Zeros, u_k, u_strong, lib)\n",
+    "    u_normH1 = gedim.ComputeErrorH1(ZerosDerivative, u_k, u_strong, lib)\n",
+    "    \n",
+    "    solution_norm = u_normL2;\n",
+    "    residual_norm = du_normL2;\n",
+    "    \n",
+    "    print(\"dofs\", \"h\", \"errorL2\", \"errorH1\", \"residual\", \"iteration\", \"max_iteration\")\n",
+    "    print(problemData['NumberDOFs'], '{:.16e}'.format(problemData['H']), '{:.16e}'.format(u_errorL2 / u_normL2), '{:.16e}'.format(u_errorH1 / u_normH1), '{:.16e}'.format(residual_norm / u_normL2), '{:d}'.format(num_iteration), '{:d}'.format(max_iterations)) \n",
+    "    \n",
+    "    num_iteration = num_iteration + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gedim.PlotSolution(mesh, dofs, strongs, u_k, u_strong)\n",
+    "gedim.ExportSolution(Burger_exactSolution, u_k, u_strong, lib)\n",
     "\n",
-    "print(\"dofs\", \"h\", \"errorL2\", \"errorH1\")\n",
-    "print(problemData['NumberDOFs'], '{:.16e}'.format(problemData['H']), '{:.16e}'.format(errorL2), '{:.16e}'.format(errorH1))"
+    "[numQuadraturePoints, quadraturePoints, quadratureWeights, sol, sol_x, sol_y] = gedim.EvaluateSolutionOnPoints(u_k, u_strong, lib)\n",
+    "gedim.ExportSolutionOnPoints(numQuadraturePoints, quadraturePoints, sol, lib)"
    ]
   }
  ],
@@ -377,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
